# veldt-kya

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.phoenix.yml  kya_smoke.db  mavlink-sitl-abc.json  mavlink-sitl-ci-equiv.json  mavlink-sitl-local.json  mavlink-sitl-r3.json  mavlink-sitl-r4.json  mavlink-sitl-r5.json  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.kya_test/: claude_agent_payload.json  claude_agent_response.json  claude_research_principal.json  openai_agents_payload.json  openai_agents_response.json  openai_agents_response2.json  openclaw_OpenClawBrowserAgent_payload.json  openclaw_OpenClawBrowserAgent_response.json  openclaw_OpenClawCalendarAgent_payload.json  openclaw_OpenClawCalendarAgent_response.json  openclaw_OpenClawEmailAgent_payload.json  openclaw_OpenClawEmailAgent_response.json  openclaw_payload.json  openclaw_real_score_payload.json  openclaw_real_score_response.json  openclaw_response.json  otlp_e2e_payload.json  principal_CriticAgent.json  principal_OpenClawBrowserAgent.json  principal_OpenClawCalendarAgent.json  principal_OpenClawEmailAgent.json  principal_ReporterAgent.json  principal_ResearchAgent.json  real_openclaw_memory_wiki_raw.json  real_research_principal.json  real_research_v2.json
bench_results/: garak_multirun_summary_FINAL.json  garak_multirun_summary_FINAL.md  garak_sweep_20260605T010859Z.json  garak_sweep_20260605T010859Z.md  garak_sweep_20260605T011623Z.json  garak_sweep_20260605T011623Z.md  garak_sweep_20260605T020126Z.json  garak_sweep_20260605T020126Z.md  garak_sweep_20260605T020517Z.json  garak_sweep_20260605T020517Z.md  garak_sweep_20260605T020713Z.json  garak_sweep_20260605T020713Z.md  garak_sweep_20260605T020809Z.json  garak_sweep_20260605T020809Z.md  garak_sweep_20260605T022220Z.json  garak_sweep_20260605T022220Z.md  garak_sweep_20260605T023828Z.json  garak_sweep_20260605T023828Z.md  garak_sweep_20260605T025642Z.json  garak_sweep_20260605T025642Z.md  garak_sweep_20260605T031302Z.json  garak_sweep_20260605T031302Z.md  garak_sweep_20260605T032841Z.json  garak_sweep_20260605T032841Z.md  pyrit_novel_20260605T014022Z.json  pyrit_novel_20260605T014022Z.md  pyrit_novel_20260605T014325Z.json  pyrit_novel_20260605T014325Z.md  pyrit_per_judge_20260605T014325Z.json  pyrit_per_judge_20260605T014325Z.md
docs/: LIMITATIONS.md  LIVE_RUNTIME_TEST_RESULTS.md  NOVEL_PRIMITIVES.md  OPEN_CORE_STRATEGY.md  PAPER_REPOSITIONING_AUDIT.md  PYPI_ONBOARDING.md  PYPI_RELEASE_CHECKLIST.md  RELEASE.md  VERIFICATION_REPORT.md  did_quickstart.md  dualwrite.md  gateway_quickstart.md  inbound.md  kya_collector_roadmap.md  storage_backends.md
examples/: README.md  _phase2_check.py  benchmark_kya_latency.py  concurrency_load_test.py  concurrency_load_test_all_backends.py  demo_event_vs_ingest_time.py  demo_evidence.py  demo_hooks_wire_in.py  demo_langchain_handler.py  demo_live_data.py  demo_live_data_mysql.py  demo_principals.py  demo_regulator_pack.py  demo_regulator_pack_all_backends.py  demo_regulator_pack_full_7_items.py  four_gate_adversarial_test.py  framework_integration_check.py  interaction_multiplier_ablation.py  kms_provider_example.py  live_activegraph_with_kya.py  live_e2e_attack_chains.py  live_e2e_audit_export.py  live_e2e_budget_governance.py  live_e2e_delegation_overrides.py  live_e2e_delegation_policy.py  live_e2e_did_principal.py  live_e2e_external_id_binding.py  live_e2e_fanout_attribution.py  live_e2e_hardening.py  live_e2e_jwt_auth.py  live_e2e_keycloak_real_idp.py  live_e2e_openai_multistep.py  live_e2e_rbac.py  live_e2e_real_jwt_idps.py  live_e2e_risk_tier_defaults.py  live_e2e_spiffe.py  live_e2e_spiffe_real_jwt.py  live_langchain_clean.py  live_openai_agents.py  live_openinference_to_bridge.py  (+11 more)
kya/: __init__.py  _dialect_helpers.py  _emit.py  _inbound_signing.py  _legacy_tables.py  _migrations.py  _portable.py  _redactor.py  _security_events.py  _session_factory.py  _valkey.py  agent_aliases.py  assessment.py  audit_export.py  auth.py  autoinstrument.py  blast_radius.py  compliance.py  compliance_exports.py  compliance_shim.py  cost.py  cost_analytics.py  data_classes.py  delegation.py  delegation_analytics.py  delegation_overrides.py  delegation_policy.py  delegation_trust.py  demo.py  deployment.py  did.py  did_document.py  dualwrite.py  evidence.py  external_defenders.py  external_emitters.py  external_id.py  fault_attribution.py  feedback.py  fiddler_bridge.py  (+44 more)
kya_gateway/: __init__.py  __main__.py  _dpop.py  cli.py  config.py  errors.py  forwarder.py  identity.py  mcp_protocol.py  policy_pipeline.py  server.py
kya_hooks/: __init__.py  _snapshot.py  claude_agent.py  client.py  langchain.py  mcp.py  openai_agents.py  scanner.py
kya_otlp_bridge/: Dockerfile  __init__.py  bridge.py  kya_hooks_client.py  mapper.py
kya_redteam/: __init__.py  attacker_llm.py  campaigns.py  datasets.py  garak_runtime.py  multi_turn.py  pyrit_orchestrator.py  pyrit_runtime.py  pyrit_scorer.py  pyrit_target.py  runs.py  runtime.py  server.py  sidecar_client.py  targets.py
scripts/: README_mavlink_sitl.md  _sitl_common.py  aggregate_garak_runs.py  aggregate_pyrit_per_judge.py  benchmark_garak_1800.py  benchmark_multijudge_panel.py  benchmark_pyrit_novel.py  generate_kya_signing_key.py  generate_kyp_test_vectors.py  mavlink_gazebo_sitl_capture.py  mavlink_sitl_live_capture.py  mavlink_stability_long_run.py
tests/: test_agent_first_sight_signal.py  test_all_migrated_tables_parity.py  test_assessment.py  test_assessment_live.py  test_attack_chains_cross_agent.py  test_attack_chains_cross_agent_live.py  test_attack_chains_dag.py  test_attack_chains_matchers.py  test_attack_chains_sigma.py  test_attack_chains_state_valkey.py  test_attack_chains_state_valkey_live.py  test_audit_export.py  test_auth.py  test_autonomy_canonical.py  test_cross_backend_real_data.py  test_daemon_lifecycle.py  test_delegation_overrides.py  test_delegation_policy.py  test_delegation_readiness_report.py  test_demo.py  test_did_jwk.py  (+82 more)
(+77 files in other folders)
