[build-system]
# setuptools >=77 required for PEP 639 SPDX `license = "Apache-2.0"` syntax.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veldt-kya"
version = "0.3.6rc1"
description = "KYA (Know Your Agents) — Open-source trust, governance, and evidentiary assurance infrastructure for autonomous systems. Built on KYP (Know Your Principal), a unified trust model for human users, AI agents, service accounts, and machine identities."
readme = "README.md"
# Apache-2.0 chosen for:
#   • Explicit patent grant (protects users + contributors)
#   • Industry default for infrastructure (k8s, TensorFlow, Linkerd)
#   • 5-minute enterprise legal review
#   • Compatible with hosted-Veldt commercial offering on top
# SPDX identifier per PEP 639.
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Veldt Labs Inc.", email = "kola@veldtlabs.ai" },
]
keywords = [
    "agent", "agents", "ai-governance", "ai-safety", "agent-governance",
    "model-risk", "agent-trust", "kya", "compliance", "ai-act", "nist",
    "langchain", "crewai", "openai-assistants", "autonomous-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    # Required for storage primitives (versioning, principal trust,
    # compliance shim, governance audit). KYA's read/write helpers
    # need a Session; if the consumer doesn't want SQL state, they
    # can still call score_agent / normalize_agent_def directly.
    "SQLAlchemy>=2.0",
    # Required by kya_hooks (eager import) and by dualwrite / inbound /
    # telemetry HTTP paths (lazy import). Bundling it here keeps
    # `import kya_hooks` working out of the box. The `[webhooks]` extra
    # is kept below for backward compatibility but is now a no-op.
    "requests>=2.31",
]

[project.optional-dependencies]
metrics  = ["prometheus_client>=0.20"]
tracing  = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
webhooks = ["requests>=2.31"]
judge    = ["litellm>=1.55"]
# attack_chains is the YAML-rule DSL (kya/attack_chains). The loader
# fails-soft when PyYAML is missing -- programmatic dict-form rules
# still work. Install this extra for YAML rule files.
attack_chains = ["pyyaml>=6.0"]
# MAVLink (drone) runtime parser. pymavlink is LGPL-3.0 -- declared
# as an optional extra so the Apache-2.0 kya core wheel stays clean
# (consumers explicitly opt into LGPL by installing this extra).
# Without this extra the parser still works on dict-shaped inputs
# (e.g. fixtures, JSON streams from a MAVLink router) -- pymavlink
# is only needed when the collector itself reads raw UART / UDP /
# .tlog files.
mavlink = ["pymavlink>=2.4,<3"]
# Presidio PII detector (opt-in scorer_orchestrator adapter).
# kya/scorers_presidio.py uses Presidio's pattern-based
# recognizers DIRECTLY without spaCy/NLP -- so the only runtime
# dep is presidio-analyzer itself (lightweight). Customers who
# want NLP-backed person/location detection layer their own
# adapter on top of presidio-analyzer's full AnalyzerEngine.
# Version pins cap upper-major to protect against API-breaking
# upstream releases. Customers can override by `pip install
# presidio-analyzer==X.Y.Z` outside the extra; the adapter
# already catches API mismatches at runtime and returns
# verdict="ERROR" for that judge while the rest keep voting.
# presidio-analyzer transitively pulls in spaCy (its NLP engine
# substrate), and spaCy's CLI module imports `click` at module load
# without declaring it as a hard dep. Pin click explicitly so a fresh
# `pip install kya[presidio]` doesn't error on import.
presidio = [
    "presidio-analyzer>=2.2,<3",
    "click>=8.1",
]
# Auto-loading of `.env` files at `import kya`. Without this extra, KYA
# still works -- operators must export provider keys (OPENAI_API_KEY,
# FIDDLER_API_KEY, etc.) into the process env themselves. With this
# extra, `import kya` calls `load_dotenv(override=False)` so a project-
# root .env file populates os.environ before fiddler_bridge /
# scorer_orchestrator / kya_redteam attempt to read keys. Opt out at
# runtime with `KYA_DISABLE_DOTENV=1`.
dotenv = ["python-dotenv>=1.0"]
# Recommended starter pack for the multi-judge orchestrator. Each
# package here is INDEPENDENT -- if one fails to install in a
# constrained environment, the customer can drop that extra and
# install the others one at a time:
#   pip install kya[presidio]   # PII judge only
#   pip install kya[judge]      # LLM judges only
# `register_available_adapters()` registers whichever extras the
# environment has, gracefully skipping the rest.
recommended = [
    "presidio-analyzer>=2.2,<3",   # kya_presidio (PII)
    "click>=8.1",                  # transitive: spaCy CLI needs it
    # litellm covers ALL the LLM judges in the panel:
    #   - arize_phoenix       (Phoenix prompt template shim)
    #   - openai_judge        (faithfulness refusal-vs-hallucination
    #                          via fiddler_bridge.llm_judge_*;
    #                          provider-agnostic via
    #                          KYA_FAITH_JUDGE_MODEL env var)
    # Customers don't need provider-specific SDKs (openai, anthropic)
    # -- litellm routes by model string. They just set the
    # corresponding API key in env (OPENAI_API_KEY /
    # ANTHROPIC_API_KEY / GROQ_API_KEY / etc.).
    "litellm>=1.55,<2",
    # The whole motivation for the [recommended] judge starter pack is
    # that customers can `pip install veldt-kya[recommended]` and have
    # the multi-judge orchestrator just work. Bug B surfaced that
    # without dotenv auto-load, the judges silently ERRORed in
    # CLI/pytest/notebook contexts where the operator hadn't already
    # exported their provider keys. Including python-dotenv here keeps
    # the "starter judge experience" usable out of the box.
    "python-dotenv>=1.0",
]
# Full opt-in panel including frameworks that need installation but
# no API keys. Does NOT include lakera_guard / nemo_guardrails --
# those require commercial licenses or hand-written config files
# that the install can't satisfy automatically.
all_judges = [
    "presidio-analyzer>=2.2,<3",
    "click>=8.1",                  # transitive: spaCy CLI needs it
    "litellm>=1.55,<2",
    "langkit",
]
# Phase 3d — W3C DID + Verifiable Credentials. Ships off by default;
# enable per resolver via env (KYA_DID_RESOLVERS=key,web,jwk). Verified
# Credential parsing uses JWT-VC (pyjwt) + Ed25519 / EC / RSA (cryptography).
did      = [
    "cryptography>=41",
    "pyjwt>=2.8",
]
# KYA Gateway — MCP-compatible reverse proxy (kya_gateway/). Pulls in
# FastAPI + uvicorn + httpx + PyYAML + sse-starlette. Customers `pip install
# veldt-kya[gateway,did]` get an MCP-aware policy + audit plane in front of
# any backend MCP server.
gateway  = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sse-starlette>=2.0",
    # Valkey/Redis client. The gateway's policy pipeline calls
    # `kya._valkey.get_valkey()` for the token-bucket rate limiter and
    # the Phase 5g revocation cache. Without redis-py installed
    # `get_valkey` returns None silently and the gateway fail-opens
    # rate limiting -- a silent degradation that bit Phase 12 testing.
    # Bundling here makes `veldt-kya[gateway]` sufficient on its own.
    "redis>=5.0",
]
all      = [
    "prometheus_client>=0.20",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "requests>=2.31",
    "litellm>=1.55",
    "pyyaml>=6.0",
    "pymavlink>=2.4,<3",
    "presidio-analyzer>=2.2",
    "cryptography>=41",
    "pyjwt>=2.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.urls]
Homepage      = "https://veldtlabs.ai/kya"
Documentation = "https://veldtlabs.ai/kya/docs"
Source        = "https://github.com/veldtlabs/veldt-kya"
Issues        = "https://github.com/veldtlabs/veldt-kya/issues"
Changelog     = "https://github.com/veldtlabs/veldt-kya/blob/main/CHANGELOG.md"

# ─── Package discovery ──────────────────────────────────────────────
# `kya/` lives at the repo root. The wheel only ships the core SDK —
# kya_hooks/, kya_otlp_bridge/, kya_redteam/ are in the same repo for
# co-located development but are NOT bundled into `pip install veldt-kya`
# (they have their own packaging or are deployed as separate containers).
#
# Result: `pip install veldt-kya` gives users just `kya.*`, importable
# at top level with no transitive Veldt-platform leak.

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where   = ["."]
# All 4 top-level packages ship in the wheel. Heavy deps (fastapi,
# pyrit, garak) are imported lazily inside the relevant submodules so
# `import kya_otlp_bridge` / `import kya_redteam` always work; only
# accessing features that need those deps triggers the import. Users
# who only need the core SDK pay no cost; users who need the OTel
# sidecar or red-team harness add `pip install fastapi uvicorn` or
# `pip install pyrit-ai` themselves.
include = [
    "kya", "kya.*",
    "kya_hooks", "kya_hooks.*",
    "kya_otlp_bridge", "kya_otlp_bridge.*",
    "kya_redteam", "kya_redteam.*",
    # Phase 4 — MCP-compatible reverse proxy. Imports its heavy deps
    # (FastAPI, uvicorn, httpx) lazily inside kya_gateway.server / .forwarder
    # so `import kya_gateway` works for tooling that only needs config /
    # error types without the HTTP runtime.
    "kya_gateway", "kya_gateway.*",
]
exclude = [
    "kya.tests*", "kya._scratch*",
    "tests*", "examples*", "scripts*", "docs*",
]

[project.scripts]
# MVP runtime-event collector. Customers `pip install veldt-kya` and
# can immediately pipe Falco/auditbeat/etc. JSON into it -- no glue
# code required. Premium production-grade collector with persistent
# cursor / Kafka transport / health endpoint ships in veldt-kya-pro.
kya-runtime-collect = "kya.runtime.cli:main"
# Phase 4 — MCP-compatible reverse proxy. Customers `pip install
# veldt-kya[gateway,did]` and immediately have a deployable gateway:
#     kya-gateway --config gateway.yaml --port 8080
kya-gateway = "kya_gateway.cli:main"

[tool.setuptools.package-data]
kya = ["py.typed"]

# ─── Lint / format ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dist", "build", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 — long lines: enforced by formatter; ignore here to skip false
#        positives on long string literals.
# B008  — FastAPI Depends() default-value pattern, intentional in
#         optional hooks.
# SIM105 — `try/except/pass` is perfectly idiomatic for best-effort
#          counter increments and atexit cleanup; contextlib.suppress
#          adds an import dependency without changing semantics.
# SIM102/SIM103 — nested `if` and `return wrap` style; preserved where
#                 chosen for readability.
# E701  — multiple statements per line; sometimes used for compact
#         one-line conditionals.
# B904  — `raise X` inside `except` without `from e`; we have many
#         intentional swallow-and-rewrap patterns where chaining adds
#         noise rather than signal.
# B905  — `zip()` without `strict=`; backwards-compatible default
#         behavior is intentional.
# UP031 — `%`-format → f-string; preserved where the % form is
#         clearer (e.g. logging templates).
# F841  — assigned-but-unused locals; preserved where the assignment
#         documents intent (e.g. capturing last exception for debugger).
ignore = ["E501", "B008", "SIM105", "SIM102", "SIM103", "E701",
          "B904", "B905", "UP031", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]  # re-exports + intentional late imports
"examples/*.py" = ["E402"]
# Optional-dependency availability checks: importing the module is the
# probe; the imported names are intentionally unused.
"kya_redteam/garak_runtime.py" = ["F401"]
# Conditional / lazy module-level imports after a feature gate.
"kya_redteam/datasets.py" = ["E402"]
"kya_redteam/pyrit_target.py" = ["E402"]
"kya/principals.py" = ["E402"]

